<resources>

    <!-- レイアウト文字列 -->
    <string name="menu_label">介護記録</string>


    <!-- ドロワー・メニュー用文字列 -->
    <string name="menu_name">メニュー</string>
    <string name="menu_user_information_label">利用者情報</string>
    <string name="menu_weekly_data_label">週間データ</string>
    <string name="menu_account_out">ログアウト</string>

    <!-- 設定用文字列 -->
    <string name="information_title">利用者情報設定</string>
    <string name="account_change">アカウント変更</string>

    <!-- 添付画像 -->
    <string name="image_view_label">添付画像</string>


    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="kaigo_note">介護記録</string>
    <string name="vital_signs">バイタル</string>
    <string name="blood_sugar">血糖</string>
    <string name="body_wight">体重</string>
    <string name="breakfast">朝食</string>
    <string name="lunch">昼食</string>
    <string name="dinner">夕食</string>
    <string name="water_drinking">水分</string>
    <string name="Internal_medicine">内服</string>
    <string name="excretion">排泄</string>
    <string name="bathing">入浴</string>
    <string name="sleep">睡眠</string>
    <string name="active">活動</string>
    <string name="timer_change">変更</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>