<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/content"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/activity_main_drawer">


    </com.google.android.material.navigation.NavigationView>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layerType="none"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/kaigo_note"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/vital_text"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-14dp" />

        <ImageView
            android:id="@+id/vital_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_vital_signs"
            app:layout_constraintEnd_toStartOf="@+id/sugar_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sugar_image"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/vital_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/vital_signs"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vital_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/vital_image"
            app:layout_constraintTop_toBottomOf="@+id/vital_image" />

        <ImageView
            android:id="@+id/sugar_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@color/purple_700"
            android:fontFamily="sans-serif"
            android:src="@drawable/ic_sugar_blood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/blood_sugar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_sugar"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sugar_image"
            app:layout_constraintStart_toStartOf="@+id/sugar_image"
            app:layout_constraintTop_toBottomOf="@+id/sugar_image" />

        <ImageView
            android:id="@+id/body_wight_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_body_weight"
            app:layout_constraintBottom_toBottomOf="@+id/sugar_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sugar_image" />

        <TextView
            android:id="@+id/body_wight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_wight"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/blood_sugar_text"
            app:layout_constraintEnd_toEndOf="@+id/body_wight_image"
            app:layout_constraintStart_toStartOf="@+id/body_wight_image"
            app:layout_constraintTop_toBottomOf="@+id/body_wight_image" />

        <ImageView
            android:id="@+id/breakfast_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_breakfast"
            app:layout_constraintEnd_toEndOf="@+id/vital_image"
            app:layout_constraintStart_toStartOf="@+id/vital_image"
            app:layout_constraintTop_toTopOf="@+id/lunch_image" />

        <TextView
            android:id="@+id/breakfast_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/breakfast_image"
            app:layout_constraintStart_toStartOf="@+id/breakfast_image"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_image" />

        <ImageView
            android:id="@+id/lunch_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_lunch"
            app:layout_constraintEnd_toEndOf="@+id/sugar_image"
            app:layout_constraintStart_toStartOf="@+id/sugar_image"
            app:layout_constraintTop_toBottomOf="@+id/blood_sugar_text" />

        <TextView
            android:id="@+id/lunch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/lunch"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lunch_image"
            app:layout_constraintStart_toStartOf="@+id/lunch_image"
            app:layout_constraintTop_toBottomOf="@+id/lunch_image" />


        <ImageView
            android:id="@+id/dinner_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_dinner"
            app:layout_constraintStart_toStartOf="@+id/body_wight_image"
            app:layout_constraintTop_toTopOf="@+id/lunch_image" />

        <TextView
            android:id="@+id/dinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/dinner"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/dinner_image"
            app:layout_constraintStart_toStartOf="@+id/dinner_image"
            app:layout_constraintTop_toBottomOf="@+id/dinner_image" />

        <ImageView
            android:id="@+id/water_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_water"
            app:layout_constraintEnd_toStartOf="@+id/medicine_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunch_text" />

        <TextView
            android:id="@+id/water_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/water_drinking"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/water_image"
            app:layout_constraintStart_toStartOf="@+id/water_image"
            app:layout_constraintTop_toBottomOf="@+id/water_image" />

        <ImageView
            android:id="@+id/medicine_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_medicine"
            app:layout_constraintEnd_toEndOf="@+id/lunch_image"
            app:layout_constraintStart_toStartOf="@+id/lunch_image"
            app:layout_constraintTop_toBottomOf="@+id/lunch_text" />

        <TextView
            android:id="@+id/medicine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/Internal_medicine"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/medicine_image"
            app:layout_constraintStart_toStartOf="@+id/medicine_image"
            app:layout_constraintTop_toBottomOf="@+id/medicine_image" />

        <ImageView
            android:id="@+id/excretion_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_excretion"
            app:layout_constraintEnd_toEndOf="@+id/dinner_image"
            app:layout_constraintStart_toStartOf="@+id/dinner_image"
            app:layout_constraintTop_toBottomOf="@+id/lunch_text" />

        <TextView
            android:id="@+id/excretion_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/excretion"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/excretion_image"
            app:layout_constraintStart_toStartOf="@+id/excretion_image"
            app:layout_constraintTop_toBottomOf="@+id/excretion_image" />

        <ImageView
            android:id="@+id/bathing_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_bathing"
            app:layout_constraintEnd_toEndOf="@+id/water_image"
            app:layout_constraintStart_toStartOf="@+id/water_image"
            app:layout_constraintTop_toBottomOf="@+id/medicine_text" />

        <TextView
            android:id="@+id/bathing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/bathing"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/bathing_image"
            app:layout_constraintStart_toStartOf="@+id/bathing_image"
            app:layout_constraintTop_toBottomOf="@+id/bathing_image" />

        <ImageView
            android:id="@+id/sleep_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_sleep"
            app:layout_constraintEnd_toEndOf="@+id/medicine_image"
            app:layout_constraintStart_toStartOf="@+id/medicine_image"
            app:layout_constraintTop_toBottomOf="@+id/medicine_text" />

        <TextView
            android:id="@+id/sleep_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sleep"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sleep_image"
            app:layout_constraintStart_toStartOf="@+id/sleep_image"
            app:layout_constraintTop_toBottomOf="@+id/sleep_image" />

        <ImageView
            android:id="@+id/activity_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_700"
            android:src="@drawable/ic_activity"
            app:layout_constraintEnd_toEndOf="@+id/excretion_image"
            app:layout_constraintStart_toStartOf="@+id/excretion_image"
            app:layout_constraintTop_toBottomOf="@+id/medicine_text" />

        <TextView
            android:id="@+id/activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/active"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/activity_image"
            app:layout_constraintStart_toStartOf="@+id/activity_image"
            app:layout_constraintTop_toBottomOf="@+id/activity_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.drawerlayout.widget.DrawerLayout>





